# Du_An_CNPM

./: Dockerfile  DuAnCNPM.csproj  Program.cs  appsettings.Production.json  appsettings.json
ANPR_Module/: CMakeLists.txt  README_Build.md  build_and_run.bat  main.cpp
Controllers/: AccountController.cs  CardsController.cs  DashboardController.cs  HomeController.cs  ParkingSessionsController.cs  ParkingSlotsController.cs  PricingRulesController.cs  SubscriptionsController.cs
Data/: ApplicationDbContext.cs
Migrations/: 20260328131714_InitialCreate.Designer.cs  20260328131714_InitialCreate.cs  20260328133405_SeedAdminUser.Designer.cs  20260328133405_SeedAdminUser.cs  20260328141614_AddVehicleTypeToParkingSession.Designer.cs  20260328141614_AddVehicleTypeToParkingSession.cs  20260329071332_UpdateParkingFeeLogicV2.Designer.cs  20260329071332_UpdateParkingFeeLogicV2.cs  20260329080450_AddMonthlySubscriptions.Designer.cs  20260329080450_AddMonthlySubscriptions.cs  20260329081054_AddSlotManagementV2.Designer.cs  20260329081054_AddSlotManagementV2.cs  20260329082333_FinalModulesUpdate.Designer.cs  20260329082333_FinalModulesUpdate.cs  20260329085458_AddCardSeedingAndLogic.Designer.cs  20260329085458_AddCardSeedingAndLogic.cs  20260329092613_SupportBase64Images.Designer.cs  20260329092613_SupportBase64Images.cs  ApplicationDbContextModelSnapshot.cs
Models/: Card.cs  ErrorViewModel.cs  ParkingSession.cs  ParkingSlot.cs  PricingRule.cs  ReportViewModel.cs  Subscription.cs  User.cs
Properties/: launchSettings.json
Views/: _ViewImports.cshtml
Views/Account/: Login.cshtml
(+22 files in other folders)
